2013-08-01 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor.php,
	godmode/agentes/manage_config_remote.php,
	godmode/agentes/agent_manager.php,
	godmode/agentes/modificar_agente.php,
	godmode/agentes/configurar_agente.php,
	include/functions_modules.php,
	include/functions_agents.php, operation/agentes/estado_agente.php:
	fixed and unified the code to access the remote config.

2013-08-01 Hirofumi Kosaka <kosaka@rworks.jp>

	* include/functions_api.php: Added new API function
	'api_set_enable_disable_agent'.

	MERGED FROM TRUNK.

2013-07-30 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/module_manager_editor_prediction.php,
	include/constants.php: fixed the repeat operator and added some
	constants for to make more easy the code.
	
	Fixes: #2279
	
	MERGED FROM THE TRUNK

2013-07-25  Ramon Novoa  <rnovoa@artica.es>

	* godmode/servers/manage_recontask_form.php: Merged from trunk. Added a
	  help tip for parent recursion.

2013-07-24 Juan Manuel Ramon Vigo <juanmanuel.ramon@artica.es>

        * include/functions_forecast.php: Avoid timeout in prediction date
        item report. Merged bugfix from trunk.

2013-07-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/agentes/configurar_agente.php: fixed the default value for
	"prediction_module" in tagente_module.
	
	MERGED FROM THE TRUNK.

2013-07-11  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_pchart.php
	include/graphs/pChart/pPie.class.php
	include/graphs/fgraph.php
	include/graphs/functions_utils.php: Add support to colors
	in pie graphs and fix important bug in static graphs library.
	All of them to fix new console mobile pie graph in agent view

2013-07-09  Ramon Novoa  <rnovoa@artica.es>

	* operation/snmpconsole/snmp_view.php: Do not retrieve all traps to
	  get a list of sources.

2013-07-08 Miguel de Dios <miguel.dedios@artica.es>
	
	* godmode/modules/manage_network_components.php: fixed the float