@@ -212,12 +212,9 @@ $table->data[5][1] .= ui_print_os_icon ($id_os, false, true);
 $table->data[5][1] .= '</span>';
 
 // Network server
-$none = '';
-if ($server_name == '' && $id_agente)
-	$none = __('None');
 $table->data[6][0] = __('Server');
 $table->data[6][1] = html_print_select (servers_get_names (),
-	'server_name', $server_name, '', $none, 0, true). ' ' . ui_print_help_icon ('agent_server',true);
+	'server_name', $server_name, '', __('None'), '', true). ' ' . ui_print_help_icon ('agent_server',true);
 
 // Description
 $table->data[7][0] = __('Description');
